# orion

./: .coverage  .dockerignore  .editorconfig  .env.example  .gitignore  .markdownlint-cli2.yaml  .markdownlint.jsonc  .pre-commit-config.yaml  ARCHITECTURE.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  Dockerfile.sandbox  Makefile  Notes  Notes-plan.md  OPERATIONS.md  README.md  ROADMAP.md  SESSION_FINDINGS.md  commitlint.config.js  commitlint.config.mjs  docker-compose.yml  package-lock.json  pyproject.toml  requirements-dev.txt  requirements-eval.txt  requirements.txt
.github/: copilot-instructions.md  dependabot.yml  pull_request_template.md
.prompts/: chat1-healthcheck-diagnosis.md
apps/rag/harvester/: .autorc  .env.example  .envrc  .gitignore  .pre-commit-config.yaml  BATCH-HARVEST-GUIDE.md  Makefile  README.md  activate.sh  pyproject.toml  requirements-dev.txt  requirements.txt
apps/rag/harvester/config/: README.md  orion.toml  search_terms.csv
apps/rag/harvester/config/profiles/: host.env  host.env.example  laptop.env  laptop.env.example
apps/rag/harvester/harvester-docs/: API_KEY_SETUP.md  BULK_HARVEST_GUIDE.md  CATEGORY_MANAGEMENT.md  CLI_USAGE.md  DATA_SOURCES.md  FILE_ORGANIZATION.md  HARVESTER_OPTIMIZATION_STATUS.md  QUALITY_ASSURANCE.md  QUICK_START.md  README.md  REORGANIZATION_COMPLETE.md
apps/rag/harvester/requirements/: constraints.txt  dev.txt
apps/rag/harvester/scripts/: batch_harvest.py  monitor-harvest.sh  overnight-harvest.sh
apps/rag/harvester/src/: __init__.py  cli.py  constants.py  doc_config.py  downloader.py  filters.py  provider_factory.py  utils.py
apps/rag/harvester/src/converters/: __init__.py  html_converter.py  md_normalizer.py  pdf_converter.py
apps/rag/harvester/src/providers/: __init__.py  arxiv.py  base.py  biorxiv.py  blog.py  core.py  crossref.py  dblp.py  github.py  hal.py  medrxiv.py  openalex.py  pubmed.py  readthedocs.py  semantic_scholar.py  vendor_pdf.py  zenodo.py
apps/rag/harvester/tests/: MCDC-TARGETS.md  README.md  __init__.py  conftest.py  smoke_test.sh  test_arxiv.py  test_base_provider.py  test_biorxiv.py  test_blog.py  test_core.py  test_crossref.py  test_dblp.py  test_github_provider.py  test_openalex.py  test_provider_factory.py  test_providers_quick.py  test_pubmed.py  test_readthedocs.py  test_semantic_scholar.py  test_vendor_pdf.py
apps/rag/harvester/tests/integration/: test_cli.py
docs/: 2026-03-15-structural-audit-prompt.md  automation-guardrails-plan.md  ideal-system-plan.md  pygments-CVE-2026-4539.md
eval/: evaluate.py  queries.jsonl  responses.jsonl  run_eval.py
hal/: __init__.py  __main__.py  agent.py  agents.py  bootstrap.py  config.py  executor.py  facts.py  falco_noise.py  healthcheck.py  intent.py  judge.py  knowledge.py  llm.py  logging_utils.py  main.py  memory.py  notify.py  patterns.py  playbooks.py  sandbox.py  (+13 more)
(+318 files in other folders)
